--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -2,6 +2,7 @@
 <div class="container pt-4 pb-4 ">
 
     <h1>Bienvenido al panel de incidencias </h1>
+{{userIdForm}} 
 
     <div *ngIf="!userIsAuthenticated" class="nav nav-pills flex-column mt-auto">
         <hr>
@@ -16,10 +17,45 @@
       <div *ngIf="userIsAuthenticated" class="nav nav-pills flex-column mt-auto">
         <hr>
         <h3>Estás logeado como: {{ userEmail }}</h3>
-        <br>
+
         <p>Usa las opciones del menú de navegación izquierdo para gestionar las incidencias</p>
+        <br>
+        <div class="card p-3">
+          <h4>AQUÍ PUEDES CAMBIARTE TU PROPIO ROL:</h4>
+          <p>Esto no estaría en una supuesta versión final pero está con motivos de prueba</p>  
+
+          <form [formGroup]="editForm" (ngSubmit)="onSubmit()" novalidate>
+
+            <div class="mb-3">
+                <label class="form-label">Identificador</label>
+                <input formControlName="id" type="text" class="form-control" required="">
+            </div>
+    
+            <div class="mb-3">
+                <label class="form-label">Email</label>
+                <input formControlName="email" type="text" class="form-control" required="">
+            </div>
+    
+        </form>
+
+          <form [formGroup]="editForm" (ngSubmit)="onSubmit()" novalidate>
+            <div class="mb-3">
+                
+                <div class="mb-3">
+                    <label class="form-label">Introduzca el Rol que desea para el usuario</label>
+                    <select formControlName="rango" class="form-select"  placeholder="Estado"  type="text">
+                        <option value="0">Usuario</option>
+                        <option value="1">Matenimiento</option>
+                        <option value="2">Directivo</option>
+                        <option value="3">Administrador</option>
+                    </select>
+                </div>
+        
+            </div>
+            <button [disabled]="!editForm.valid" type="submit" class="btn btn-primary">Actualizar estado</button>
+          </form> 
+        </div>
         <button type="button" (click)="onClick()" class="btn btn-outline-danger mt-5">Cerrar sesión</button>
-      </div>
 
     
     
