Commit Final (Cuentas de prueba)

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -18,6 +18,51 @@
         </form>
         <br>
         <a routerLink="/register" class="">¿No tienes cuenta? Regístrate aquí</a><br>
+    </div> <br> <br>
+    <h4 style="text-align: center;">Cuentas de prueba con roles pre-asignados</h4>
+    <hr>
+    <div class="cardContainer">
+        <div class="card border-primary mb-3" style="width: 48%; margin-right:2%;">
+            <div class="card-header">Cuenta de usuario</div>
+            <div class="card-body text-primary">
+              <p class="card-text">Mail: usuario@gmail.com</p>
+              <p class="card-text">Contraseña: 123456</p>
+              <p class="card-text">Rol: Usuario (0)</p>
+            </div>
+          </div>
+    
+          <div class="card border-primary mb-3" style="width: 48%; margin-left:2%;">
+            <div class="card-header">Cuenta de mantenimiento</div>
+            <div class="card-body text-primary">
+              <p class="card-text">Mail: mantenimiento@gmail.com</p>
+              <p class="card-text">Contraseña: 123456</p>
+              <p class="card-text">Rol: Mantenimiento (1)</p>
+            </div>
+          </div>
+          <br>
+          
     </div>
+    <div class="cardContainer">
+        <div class="card border-primary mb-3" style="width: 48%; margin-right:2%;">
+            <div class="card-header">Cuenta de directivo</div>
+            <div class="card-body text-primary">
+              <p class="card-text">Mail: directivo@gmail.com</p>
+              <p class="card-text">Contraseña: 123456</p>
+              <p class="card-text">Rol: Directivo (2)</p>
+            </div>
+          </div>
+    
+          <div class="card border-primary mb-3" style="width: 48%; margin-left:2%;">
+            <div class="card-header">Cuenta de administrador</div>
+            <div class="card-body text-primary">
+              <p class="card-text">Mail: admin@gmail.com</p>
+              <p class="card-text">Contraseña: 123456</p>
+              <p class="card-text">Rol: Administrador (3)</p>
+            </div>
+          </div>
+          <br>
+          
+    </div>
+    
     
 </div>
